WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137640
[GTK] fails to build with --disable-accelerated-compositing
https://bugs.webkit.org/show_bug.cgi?id=137640
Summary
[GTK] fails to build with --disable-accelerated-compositing
Alexander Tsoy
Reported
2014-10-11 14:30:57 PDT
Created
attachment 239685
[details]
Fix compilation with --disable-accelerated-compositing This problem was introduced in changeset <
http://trac.webkit.org/changeset/172828
>. The attached patch makes compilation process go further until I get the same linkage error as in
bug 131267
. I can attach the full build log if necessary. The actual error: Source/WebKit2/WebProcess/soup/WebProcessSoup.cpp: In member function ‘void WebKit::WebProcess::platformSetCacheModel(WebKit::CacheModel)’: Source/WebKit2/WebProcess/soup/WebProcessSoup.cpp:114:27: error: ‘class WebCore::PageCache’ has no member named ‘setShouldClearBackingStores’ WebCore::pageCache()->setShouldClearBackingStores(true); ^ GNUmakefile:75880: recipe for target 'Source/WebKit2/WebProcess/soup/libwebkit2gtk_3_0_la-WebProcessSoup.lo' failed
Attachments
Fix compilation with --disable-accelerated-compositing
(685 bytes, patch)
2014-10-11 14:30 PDT
,
Alexander Tsoy
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Tsoy
Comment 1
2014-10-14 02:28:49 PDT
(In reply to
comment #0
)
> The attached patch makes compilation process go further until I get the same linkage error as in
bug 131267
.
Linkage error was caused by --disable-webgl. I already provided a patch for that issue in
bug 131267
. Ignore it in this bug report.
Zan Dobersek
Comment 2
2014-12-01 05:58:27 PST
What specific version of WebKitGTK+?
Alexander Tsoy
Comment 3
2014-12-01 07:37:24 PST
2.4.6 and 2.4.7
Alberto Garcia
Comment 4
2014-12-07 10:00:43 PST
Yes, this should go to the 2.4 branch, I just tested it.
Carlos Garcia Campos
Comment 5
2015-05-18 06:10:38 PDT
Committed to 2.4
http://trac.webkit.org/changeset/184467
. Thanks
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug