[GTK] fails to build with --disable-accelerated-compositing https://bugs.webkit.org/show_bug.cgi?id=137640

Patch by Alexander Tsoy <alexander@tsoy.me> on 2015-05-18
Reviewed by Alberto Garcia.

* WebProcess/soup/WebProcessSoup.cpp:
(WebKit::WebProcess::platformSetCacheModel):